--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,60 @@
+h2 {
+  color: rgb(44, 170, 6);
+}
 
+.marquee{
+    color: rgb(13, 13, 179);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: -35px;
+}
   .poke-card {
     display: inline-block;
     flex-direction: column;
     border: 2px solid #dbdbdb;
     margin-bottom: 1.5rem;
     margin-left: 5%;
-  }
+    border: 3px solid green;
+    border-radius: 5px;
+    height: 407px;
+    /* width: 250px;
+     */
+    width:min-content
+    }
   .poke-card h4 {
-    background: #fafafa;
+    background: #e2ee3e;
     padding: 0.5rem;
+    position: relative;
+    top: -25px;
+    border-radius: 3px;
   }
   .poke-card img {
     height: 300px;
     width: 250px;
     
+  }
+
+  .poke-name {
+    color: rgb(32, 90, 30);
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 18px;
+    cursor: pointer;
+  }
+
+  .poke-hp {
+    float: right;
+  }
+.label{
+  font-family: cursive;
+}
+  .poke-desc {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    float: right;
+    color: rgb(168, 13, 91);
+  }
+
+  .poke-level {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: indigo;
   }
