--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,8 @@ h2 {
   .poke-name {
     color: rgb(32, 90, 30);
     font-family: 'Courier New', Courier, monospace;
-    font-size: 18px;
+    font-size: 19px;
+    font-style: italic;
     cursor: pointer;
   }
 
